File: plugins/nexus-repository-apt/pom.xml